[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safety-warden-v1"
version = "0.1.0"
description = "Contextual safety evaluator for the Meta PyTorch Hackathon."
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai"
]